COP: add percentage of issue areas covered in additional questions - need to make query more effecient

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -196,7 +196,7 @@ h2 { font-size: 16px; font-family: Georgia, "Times New Roman", Times, serif; fon
 #box5 div.more div { padding: 4px 0 0 10px;}
 #box5_content { position: relative; }
 
-#box6 { left: 357px; background-position: -10px -10px; background-image: url(/pics/un_images/UN_Business_Banner_Haiti.png); }
+#box6 { left: 357px; }
 #box6 h2 { padding: 25px 0 0 15px; }
 #box6 p { font-size: 12px; font-weight: bold; padding: 20px 40px 0 15px; }
 #box6 p { color: #666; }
